// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`File Thumbnail renders correctly 1`] = `
<jest>
  <div
    class="ecl-file ecl-file--thumbnail"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    id="ecl-file-with-thumbnail"
  >
    <div
      class="ecl-file__container"
    >
      <picture
        class="ecl-picture ecl-file__picture"
      >
        <img
          alt=""
          class="ecl-file__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
        />
      </picture>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlighted
          </span>
        </div>
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-with-thumbnail-title"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            State of the Union 2018 brochure
          </a>
        </div>
        <div
          class="ecl-file__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies.
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-with-thumbnail-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-with-thumbnail-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-with-thumbnail-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-with-thumbnail-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-0-lang"
              lang="bg"
            >
              Title bg
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-0-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-with-thumbnail-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-1-lang"
              lang="es"
            >
              Title es
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-1-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-with-thumbnail-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-2-lang"
              lang="fr"
            >
              Title fr
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-2-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-with-thumbnail-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File Thumbnail renders correctly with taxonomies 1`] = `
<jest>
  <div
    class="ecl-file ecl-file--thumbnail"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    id="ecl-file-taxonomy"
  >
    <div
      class="ecl-file__container"
    >
      <picture
        class="ecl-picture ecl-file__picture"
      >
        <img
          alt=""
          class="ecl-file__image"
          src="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
        />
      </picture>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlighted
          </span>
        </div>
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-taxonomy-title"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            State of the Union 2018 brochure
          </a>
        </div>
        <div
          class="ecl-file__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies.
        </div>
        <div
          class="ecl-file__taxonomy"
        >
          <dl
            class="ecl-description-list"
          >
            <dt
              class="ecl-description-list__term"
            >
              Taxonomy list
            </dt>
            <dd
              class="ecl-description-list__definition ecl-description-list__definition--taxonomy"
            >
              <ul
                class="ecl-description-list__definition-list"
              >
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 1
                </li>
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 2
                </li>
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 3
                </li>
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 4
                </li>
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 5
                </li>
                <li
                  class="ecl-description-list__definition-item"
                >
                  Taxonomy item 6
                </li>
              </ul>
            </dd>
          </dl>
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-taxonomy-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-taxonomy-link-label ecl-file-taxonomy-title ecl-file-taxonomy-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-taxonomy-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-taxonomy-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Translations (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-taxonomy-translation-0-lang"
              lang="bg"
            >
              Title bg
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-taxonomy-translation-0-link-label ecl-file-taxonomy-title ecl-file-taxonomy-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-taxonomy-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-taxonomy-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-taxonomy-translation-1-lang"
              lang="es"
            >
              Title es
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-taxonomy-translation-1-link-label ecl-file-taxonomy-title ecl-file-taxonomy-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-taxonomy-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-taxonomy-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-taxonomy-translation-2-lang"
              lang="fr"
            >
              Title fr
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-taxonomy-translation-2-link-label ecl-file-taxonomy-title ecl-file-taxonomy-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-taxonomy-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-taxonomy-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File Thumbnail renders correctly without an image 1`] = `
<jest>
  <div
    class="ecl-file ecl-file--thumbnail"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    id="ecl-file-with-thumbnail"
  >
    <div
      class="ecl-file__container"
    >
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlighted
          </span>
        </div>
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-with-thumbnail-title"
        >
          <a
            class="ecl-link ecl-link--standalone"
            href="/example"
          >
            State of the Union 2018 brochure
          </a>
        </div>
        <div
          class="ecl-file__description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer quis lorem tellus. Nullam sollicitudin suscipit diam, ac blandit ipsum tempor consectetur. Duis vitae pulvinar turpis. Donec maximus pharetra ex a ultricies.
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-with-thumbnail-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-with-thumbnail-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-with-thumbnail-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-with-thumbnail-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Other languages (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-0-lang"
              lang="bg"
            >
              Title bg
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-0-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-with-thumbnail-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-1-lang"
              lang="es"
            >
              Title es
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-1-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-with-thumbnail-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-thumbnail-translation-2-lang"
              lang="fr"
            >
              Title fr
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-thumbnail-translation-2-link-label ecl-file-with-thumbnail-title ecl-file-with-thumbnail-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-with-thumbnail-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-thumbnail-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File With translation renders correctly 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    id="ecl-file-with-translation"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
          id="ecl-file-with-translation-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-with-translation-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-with-translation-link-label ecl-file-with-translation-title ecl-file-with-translation-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-with-translation-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-with-translation-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Translations (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-0-lang"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-0-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-with-translation-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-1-lang"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-1-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-with-translation-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-2-lang"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-2-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-with-translation-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File With translation renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="ecl-file-with-translation"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
          id="ecl-file-with-translation-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-with-translation-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-with-translation-link-label ecl-file-with-translation-title ecl-file-with-translation-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-with-translation-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-with-translation-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Translations (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-0-lang"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-0-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-with-translation-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-1-lang"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-1-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-with-translation-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-2-lang"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-2-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-with-translation-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File With translation renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-file custom-class custom-class--test"
    data-ecl-auto-init="FileDownload"
    data-ecl-file=""
    id="ecl-file-with-translation"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__title"
          id="ecl-file-with-translation-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-with-translation-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-with-translation-link-label ecl-file-with-translation-title ecl-file-with-translation-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-with-translation-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-with-translation-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
    <div
      class="ecl-file__translation-container"
      data-ecl-file-translation-container=""
    >
      <button
        aria-expanded="false"
        class="ecl-button ecl-button--ghost ecl-file__translation-toggle"
        data-ecl-file-translation-toggle=""
        type="button"
      >
        <span
          class="ecl-button__container"
        >
          <span
            class="ecl-button__label"
            data-ecl-label="true"
          >
            Translations (3)
          </span>
          <svg
            aria-hidden="true"
            class="ecl-icon ecl-icon--fluid ecl-icon--rotate-180 ecl-button__icon"
            data-ecl-icon=""
            focusable="false"
          >
            <use
              xlink:href="/icons.svg#corner-arrow"
            />
          </svg>
        </span>
      </button>
      <ul
        class="ecl-file__translation-list"
      >
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-0-lang"
              lang="bg"
            >
              български
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.7 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-0-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-0-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#bg"
            hreflang="bg"
            id="ecl-file-with-translation-translation-0-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-0-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-1-lang"
              lang="es"
            >
              español
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.8 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-1-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-1-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#es"
            hreflang="es"
            id="ecl-file-with-translation-translation-1-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-1-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
        <li
          class="ecl-file__translation-item"
        >
          <div
            class="ecl-file__translation-info"
          >
            <div
              class="ecl-file__translation-title"
              id="ecl-file-with-translation-translation-2-lang"
              lang="fr"
            >
              français
            </div>
            <div
              class="ecl-file__translation-meta"
            >
              (15.4 MB - PDF)
            </div>
          </div>
          <a
            aria-labelledby="ecl-file-with-translation-translation-2-link-label ecl-file-with-translation-title ecl-file-with-translation-translation-2-lang"
            class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__translation-download"
            download=""
            href="/example#fr"
            hreflang="fr"
            id="ecl-file-with-translation-translation-2-link"
          >
            <span
              class="ecl-link__label"
              id="ecl-file-with-translation-translation-2-link-label"
            >
              Download
            </span>
            <svg
              aria-hidden="true"
              class="ecl-icon ecl-icon--fluid ecl-link__icon"
              focusable="false"
            >
              <use
                xlink:href="/icons.svg#download"
              />
            </svg>
          </a>
        </li>
      </ul>
    </div>
  </div>
</jest>
`;

exports[`File Without translation renders correctly 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-file=""
    id="ecl-file-without-translations"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-without-translations-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-without-translations-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-without-translations-link-label ecl-file-without-translations-title ecl-file-without-translations-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-without-translations-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-without-translations-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`File Without translation renders correctly with a single label 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-file=""
    id="ecl-file-without-translations"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </div>
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-without-translations-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-without-translations-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-without-translations-link-label ecl-file-without-translations-title ecl-file-without-translations-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-without-translations-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-without-translations-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`File Without translation renders correctly with extra attributes 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-file=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    id="ecl-file-without-translations"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-without-translations-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-without-translations-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-without-translations-link-label ecl-file-without-translations-title ecl-file-without-translations-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-without-translations-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-without-translations-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`File Without translation renders correctly with extra class names 1`] = `
<jest>
  <div
    class="ecl-file custom-class custom-class--test"
    data-ecl-file=""
    id="ecl-file-without-translations"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-without-translations-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-without-translations-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-without-translations-link-label ecl-file-without-translations-title ecl-file-without-translations-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-without-translations-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-without-translations-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;

exports[`File Without translation renders correctly with multiple labels 1`] = `
<jest>
  <div
    class="ecl-file"
    data-ecl-file=""
    id="ecl-file-without-translations"
  >
    <div
      class="ecl-file__container"
    >
      <svg
        aria-hidden="true"
        class="ecl-icon ecl-icon--2xl ecl-file__icon"
        focusable="false"
      >
        <use
          xlink:href="/icons.svg#file"
        />
      </svg>
      <div
        class="ecl-file__info"
      >
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--highlight"
          >
            highlight
          </span>
        </div>
        <div
          class="ecl-file__label"
        >
          <span
            class="ecl-label ecl-label--low"
          >
            important
          </span>
        </div>
        <div
          class="ecl-file__detail-meta"
        >
          <span
            class="ecl-file__detail-meta-item"
          >
            META INFO
          </span>
          <span
            class="ecl-file__detail-meta-item"
          >
            DD Month YYYY
          </span>
        </div>
        <div
          class="ecl-file__title"
          id="ecl-file-without-translations-title"
        >
          State of the Union 2018 brochure
        </div>
      </div>
    </div>
    <div
      class="ecl-file__footer"
    >
      <div
        class="ecl-file__language"
        id="ecl-file-without-translations-lang"
      >
        English
      </div>
      <div
        class="ecl-file__meta"
      >
        (16.2 MB - PDF)
      </div>
      <a
        aria-labelledby="ecl-file-without-translations-link-label ecl-file-without-translations-title ecl-file-without-translations-lang"
        class="ecl-link ecl-link--standalone ecl-link--icon ecl-file__download"
        href="/example"
        id="ecl-file-without-translations-link"
      >
        <span
          class="ecl-link__label"
          id="ecl-file-without-translations-link-label"
        >
          Download
        </span>
        <svg
          aria-hidden="true"
          class="ecl-icon ecl-icon--fluid ecl-link__icon"
          focusable="false"
        >
          <use
            xlink:href="/icons.svg#download"
          />
        </svg>
      </a>
    </div>
  </div>
</jest>
`;
